Commited changes in App.Css and index.css

--- a/App.css
+++ b/App.css
@@ -7,6 +7,7 @@
  align-content: center;
  margin-top: 70px;
  /*padding-top: 100 px;*/
+/*changes done for source tree*/
   }
 .app-wrapper{
   background-color: rgb(230, 236, 240);
