Font bold is commented ,not required

--- a/App.css
+++ b/App.css
@@ -6,7 +6,7 @@
   border-style: none;
  align-content: center;
  margin-top: 70px;
- font: bold;
+ /*font: bold;*/
  /*padding-top: 100 px;*/
 /*changes done for source tree*/
   }
